--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -71,3 +71,7 @@ $border-gray: 1px solid $gray-object-color;
 	}
 
 }
+
+@media (max-width: 40rem) {
+	.conversations { 	overflow: visible; }
+}
